--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,24 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind layout;
+@tailwind backgrounds;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
+@layer base {
+    h1, h2, h3, h4, h5, h6 {
+        @apply font-bold;
+    }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+    h1 {
+        @apply text-4xl sm:text-5xl md:text-6xl
+    }
+
+    h2 {
+        @apply text-3xl sm:text-4xl
+    }
+
+    h3 {
+        @apply text-2xl sm:text-3xl
+    }
 }
